--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     </div>
     <!--End -->
     <!-- contact form starts -->
-        <form class="fadeInUp animated">
+        <form class="fadeInUp animated" action="phpForm.php">
         <div class="col-sm-4">
         <input type="text" class="form-control" placeholder="Name ">
         </div>
